# PokemonFight

./: CMakeLists.txt
assets/: pokemons.txt
src/: Attack.cpp  Attack.hpp  Display.cpp  Enum.hpp  Game.cpp  Game.hpp  LTexture.cpp  LTexture.hpp  Player.cpp  Player.hpp  Pokemon.cpp  Pokemon.hpp  fillFuncs.cpp  main.cpp
